编译板上运行时 sophon.sail（有问题，不可能实现！）
# Conflicts:
#	cvimodel/ppocr_mb_cls.cvimodel

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,10 @@ datasets/
 downloads/*
 !downloads/*.cmd
 
-# sdk
-tpu-mlir
+# sdk & cross-compile stuff
+tpu-mlir/
+duo-sdk/
+sophon-sail/
 
 # generated
 results/
