try compile libsophon, still failed
libsophon 就不可能他妈支持 cv180x!

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ sophon-sail/
 cviruntime/
 tpu-sdk-cv180x/
 tpu-sdk-cv180x-ocr/
+build_sophon_sail/*
+!build_sophon_sail/*.sh
+!build_sophon_sail/*.cmake
 
 # generated
 results/
